--- a/Makefile_bkp
+++ b/Makefile_bkp
@@ -27,16 +27,13 @@ BIN  = $(CP) -O binary -S
 MCU  = cortex-m3
 
 # List all default C defines here, like -D_DEBUG=1
-#DDEFS = -DSTM32F10X_HD -DUSE_STDPERIPH_DRIVER -DUSE_STM3210E_EVAL
-DDEFS = -DSTM32F10X_HD
+DDEFS = -DSTM32F10X_HD -DUSE_STDPERIPH_DRIVER -DUSE_STM3210E_EVAL
+#DDEFS = -DSTM32F10X_HD -DUSE_STDPERIPH_DRIVER -DUSE_STM3210E_EVAL -D__GNUC__
 # List all default ASM defines here, like -D_DEBUG=1
 DADEFS =
 
 # List all default directories to look for include files here
 DINCDIR = ./src
-CORELIBDIR = ./cmsis_core
-STARTUPDIR = ./startup_src
-LINKER = ./startup_src
 
 # List the default directory to look for the libraries here
 DLIBDIR =
@@ -62,29 +59,59 @@ UDEFS =
 # Define ASM defines here
 UADEFS =
 
+# List C source files here
+LIBSDIR    = ../STM32F10x_StdPeriph_Lib_V3.5.0/Libraries
+CORELIBDIR = $(LIBSDIR)/CMSIS/CM3/CoreSupport
+DEVDIR  = $(LIBSDIR)/CMSIS/CM3/DeviceSupport/ST/STM32F10x
+STMSPDDIR    = $(LIBSDIR)/STM32F10x_StdPeriph_Driver
+STMSPSRCDDIR = $(STMSPDDIR)/src
+STMSPINCDDIR = $(STMSPDDIR)/inc
+#DISCOVERY    = ../STM32F0-Discovery_FW_V1.0.0/Utilities/STM32F0-Discovery
 
-# Sources Files
+LINKER = ./startup_src
+
 SRC  = ./src/main.c
-# SRC += ./src/GTK_Estructura.c
-# SRC += ./src/GTK_Hard.c
-# SRC += ./src/GTK_Signal.c
-# #SRC += ./src/pantallas.c
-# SRC += ./src/uart.c
-# SRC += ./src/timer.c
-# SRC += ./src/pwm.c
-# SRC += ./src/flash_program.c
-# SRC += ./src/adc.c
+SRC += ./src/GTK_Estructura.c
+SRC += ./src/GTK_Hard.c
+SRC += ./src/GTK_Signal.c
+#SRC += ./src/pantallas.c
+SRC += ./src/uart.c
+SRC += ./src/timer.c
+SRC += ./src/pwm.c
+SRC += ./src/flash_program.c
+SRC += ./src/adc.c
 
 ## Core Support
-SRC += ./startup_src/system_stm32f10x.c
 SRC += ./startup_src/syscalls.c
-SRC += ./cmsis_core/core_cm3.c
-
+SRC += $(CORELIBDIR)/core_cm3.c
+## used parts of the STM-Library
+SRC += $(STMSPSRCDDIR)/misc.c
+SRC += $(STMSPSRCDDIR)/stm32f10x_adc.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_cec.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_crc.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_comp.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_dac.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_dbgmcu.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_dma.c
+SRC += $(STMSPSRCDDIR)/stm32f10x_exti.c
+SRC += $(STMSPSRCDDIR)/stm32f10x_flash.c
+SRC += $(STMSPSRCDDIR)/stm32f10x_gpio.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_syscfg.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_i2c.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_iwdg.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_pwr.c
+SRC += $(STMSPSRCDDIR)/stm32f10x_rcc.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_rtc.c
+SRC += $(STMSPSRCDDIR)/stm32f10x_spi.c
+SRC += $(STMSPSRCDDIR)/stm32f10x_tim.c
+SRC += $(STMSPSRCDDIR)/stm32f10x_usart.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_wwdg.c
+#SRC += $(STMSPSRCDDIR)/stm32f10x_misc.c
 # List ASM source files here
 ASRC = ./startup_src/startup_stm32f10x_hd.s
 
-# List all include directories here
-UINCDIR = $(STARTUPDIR) \
+# List all user directories here
+UINCDIR = $(DEVDIR) \
           $(CORELIBDIR) \
           $(STMSPINCDDIR) \
           $(DISCOVERY)    \
